@@ -28,7 +28,7 @@
   msys-autogen.xml:2010090600
   msys-automake.xml:2010090600
   msys-base.xml:2010080900
-  msys-bash.xml:2010071901
+  msys-bash.xml:2010102400
   msys-binutils.xml:2010090600
   msys-bison.xml:2010092500
   msys-bzip2.xml:2010080500
