@@ -24,7 +24,7 @@
       <licence tarname="bash-%-msys-%-lic.tar" />
 
       <component class="bin">
-        <release tarname="bash-3.1.17-3-msys-1.0.13-bin.tar.lzma">
+        <release tarname="bash-3.1.17-4-msys-1.0.16-bin.tar.lzma">
           <requires eq="msys-libtermcap-*-msys-*-dll-0.tar" />
           <requires eq="msys-libregex-*-msys-*-dll-1.tar" />
         </release>
@@ -33,11 +33,11 @@
       </component>
 
       <component class="doc">
-        <release tarname="bash-3.1.17-3-msys-1.0.13-doc.tar.lzma" />
+        <release tarname="bash-3.1.17-4-msys-1.0.16-doc.tar.lzma" />
       </component>
 
       <component class="lic">
-        <release tarname="bash-3.1.17-3-msys-1.0.13-lic.tar.lzma" />
+        <release tarname="bash-3.1.17-4-msys-1.0.16-lic.tar.lzma" />
       </component>
     </package>
 
